--- a/.github/workflows/plan.yml
+++ b/.github/workflows/plan.yml
@@ -12,12 +12,11 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v2
-      # - name: Setting up GCP environment
-      #   uses: google-github-actions/setup-gcloud@v0.2.1
-      #   with:
-      #     project_id: "${{ secrets.GCP_PROJECT_ID }}"
-      #     service_account_key: "${{ secrets.GCR_SA_KEY }}"
-      #     export_default_credentials: true
+      - name: Setting up GCP environment
+        uses: google-github-actions/setup-gcloud@v0.5.1
+        with:
+          service_account_key: "${{ secrets.GCP_SA_KEY }}"
+          export_default_credentials: true
       - name: Setup Terraform
         uses: hashicorp/setup-terraform@v1.3.2
       - name: Terraform Init
@@ -35,12 +34,11 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v2
-      # - name: Setting up GCP environment
-      #   uses: google-github-actions/setup-gcloud@v0.2.1
-      #   with:
-      #     project_id: "${{ secrets.GCP_PROJECT_ID }}"
-      #     service_account_key: "${{ secrets.GCR_SA_KEY }}"
-      #     export_default_credentials: true
+      - name: Setting up GCP environment
+        uses: google-github-actions/setup-gcloud@v0.5.1
+        with:
+          service_account_key: "${{ secrets.GCP_SA_KEY }}"
+          export_default_credentials: true
       - name: Setup Terraform
         uses: hashicorp/setup-terraform@v1.3.2
       - name: Terraform Init
@@ -57,12 +55,11 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v2
-      # - name: Setting up GCP environment
-      #   uses: google-github-actions/setup-gcloud@v0.2.1
-      #   with:
-      #     project_id: "${{ secrets.GCP_PROJECT_ID }}"
-      #     service_account_key: "${{ secrets.GCR_SA_KEY }}"
-      #     export_default_credentials: true
+      - name: Setting up GCP environment
+        uses: google-github-actions/setup-gcloud@v0.5.1
+        with:
+          service_account_key: "${{ secrets.GCP_SA_KEY }}"
+          export_default_credentials: true
       - name: Setup Terraform
         uses: hashicorp/setup-terraform@v1.3.2
       - name: Terraform Init
@@ -77,12 +74,11 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v2
-      # - name: Setting up GCP environment
-      #   uses: google-github-actions/setup-gcloud@v0.2.1
-      #   with:
-      #     project_id: "${{ secrets.GCP_PROJECT_ID }}"
-      #     service_account_key: "${{ secrets.GCR_SA_KEY }}"
-      #     export_default_credentials: true
+      - name: Setting up GCP environment
+        uses: google-github-actions/setup-gcloud@v0.5.1
+        with:
+          service_account_key: "${{ secrets.GCP_SA_KEY }}"
+          export_default_credentials: true
       - name: Setup Terraform
         uses: hashicorp/setup-terraform@v1.3.2
       - name: Init
