--- a/.github/workflows/apply-bootstrap.yml
+++ b/.github/workflows/apply-bootstrap.yml
@@ -19,6 +19,7 @@ jobs:
           credentials_json: "${{ secrets.GCP_SA_KEY }}"
       - name: Setting up GCP environment
         uses: google-github-actions/setup-gcloud@v0.5.1
+        with:
           service_account_key: "${{ secrets.GCP_SA_KEY }}"
           export_default_credentials: true
       - name: Setup Terraform
