--- a/.github/workflows/plan.yml
+++ b/.github/workflows/plan.yml
@@ -15,7 +15,7 @@ jobs:
   #     - name: Setting up GCP environment
   #       uses: google-github-actions/setup-gcloud@v0.5.1
   #       with:
-  #         service_account_key: "${{ secrets.GCP_SA_KEY }}"
+  #         service_account_key: "${{ secrets.GCP_SEED_SA_KEY }}"
   #         export_default_credentials: true
   #     - name: Setup Terraform
   #       uses: hashicorp/setup-terraform@v1.3.2
@@ -37,7 +37,7 @@ jobs:
   #     - name: Setting up GCP environment
   #       uses: google-github-actions/setup-gcloud@v0.5.1
   #       with:
-  #         service_account_key: "${{ secrets.GCP_SA_KEY }}"
+  #         service_account_key: "${{ secrets.GCP_SEED_SA_KEY }}"
   #         export_default_credentials: true
   #     - name: Setup Terraform
   #       uses: hashicorp/setup-terraform@v1.3.2
@@ -58,7 +58,7 @@ jobs:
   #     - name: Setting up GCP environment
   #       uses: google-github-actions/setup-gcloud@v0.5.1
   #       with:
-  #         service_account_key: "${{ secrets.GCP_SA_KEY }}"
+  #         service_account_key: "${{ secrets.GCP_SEED_SA_KEY }}"
   #         export_default_credentials: true
   #     - name: Setup Terraform
   #       uses: hashicorp/setup-terraform@v1.3.2
@@ -77,7 +77,7 @@ jobs:
       - id: Authenticating
         uses: google-github-actions/auth@v0
         with:
-          credentials_json: "${{ secrets.GCP_SA_KEY }}"
+          credentials_json: "${{ secrets.GCP_SEED_SA_KEY }}"
       - name: Setting up GCP environment
         uses: google-github-actions/setup-gcloud@v0.5.1
         with:
