--- a/.github/workflows/plan.yml
+++ b/.github/workflows/plan.yml
@@ -6,68 +6,72 @@ on:
     tags-ignore: ["**"]
   workflow_dispatch:
 
+env:
+  TF_VAR_billing_account_id: "${{ secrets.BILLING_ACCOUNT_ID }}"
+  TF_VAR_seed_sa_email_address: "${{ secrets.SEED_SA_EMAIL_ADDRESS }}"
+
 jobs:
-  # compliance-scan:
-  #   runs-on: ubuntu-20.04
-  #   steps:
-  #     - name: Checkout
-  #       uses: actions/checkout@v2
-  #     - name: Setting up GCP environment
-  #       uses: google-github-actions/setup-gcloud@v0.5.1
-  #       with:
-  #         service_account_key: "${{ secrets.GCP_SEED_SA_KEY }}"
-  #         export_default_credentials: true
-  #     - name: Setup Terraform
-  #       uses: hashicorp/setup-terraform@v1.3.2
-  #     - name: Terraform Init
-  #       run: terraform init
-  #     - name: Run Checkov action
-  #       id: checkov
-  #       uses: bridgecrewio/checkov-action@v12.641.0
-  #       with:
-  #         framework: terraform
-  #         output_format: cli
-  #         download_external_modules: true
+  compliance-scan:
+    runs-on: ubuntu-20.04
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v2
+      - name: Setting up GCP environment
+        uses: google-github-actions/setup-gcloud@v0.5.1
+        with:
+          service_account_key: "${{ secrets.GCP_SEED_SA_KEY }}"
+          export_default_credentials: true
+      - name: Setup Terraform
+        uses: hashicorp/setup-terraform@v1.3.2
+      - name: Terraform Init
+        run: terraform init
+      - name: Run Checkov action
+        id: checkov
+        uses: bridgecrewio/checkov-action@v12.641.0
+        with:
+          framework: terraform
+          output_format: cli
+          download_external_modules: true
 
-  # security-scan:
-  #   runs-on: ubuntu-20.04
-  #   steps:
-  #     - name: Checkout
-  #       uses: actions/checkout@v2
-  #     - name: Setting up GCP environment
-  #       uses: google-github-actions/setup-gcloud@v0.5.1
-  #       with:
-  #         service_account_key: "${{ secrets.GCP_SEED_SA_KEY }}"
-  #         export_default_credentials: true
-  #     - name: Setup Terraform
-  #       uses: hashicorp/setup-terraform@v1.3.2
-  #     - name: Terraform Init
-  #       run: terraform init
-  #     - name: Terraform Format
-  #       run: terraform fmt -check
-  #     - name: tfsec
-  #       uses: triat/terraform-security-scan@v3.0.0
-  #       env:
-  #         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+  security-scan:
+    runs-on: ubuntu-20.04
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v2
+      - name: Setting up GCP environment
+        uses: google-github-actions/setup-gcloud@v0.5.1
+        with:
+          service_account_key: "${{ secrets.GCP_SEED_SA_KEY }}"
+          export_default_credentials: true
+      - name: Setup Terraform
+        uses: hashicorp/setup-terraform@v1.3.2
+      - name: Terraform Init
+        run: terraform init
+      - name: Terraform Format
+        run: terraform fmt -check
+      - name: tfsec
+        uses: triat/terraform-security-scan@v3.0.0
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
-  # qa:
-  #   runs-on: ubuntu-20.04
-  #   steps:
-  #     - name: Checkout
-  #       uses: actions/checkout@v2
-  #     - name: Setting up GCP environment
-  #       uses: google-github-actions/setup-gcloud@v0.5.1
-  #       with:
-  #         service_account_key: "${{ secrets.GCP_SEED_SA_KEY }}"
-  #         export_default_credentials: true
-  #     - name: Setup Terraform
-  #       uses: hashicorp/setup-terraform@v1.3.2
-  #     - name: Terraform Init
-  #       run: terraform init
-  #     - name: Terraform Format
-  #       run: terraform fmt -check
-  #     - name: Terraform Validate
-  #       run: terraform validate -no-color
+  qa:
+    runs-on: ubuntu-20.04
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v2
+      - name: Setting up GCP environment
+        uses: google-github-actions/setup-gcloud@v0.5.1
+        with:
+          service_account_key: "${{ secrets.GCP_SEED_SA_KEY }}"
+          export_default_credentials: true
+      - name: Setup Terraform
+        uses: hashicorp/setup-terraform@v1.3.2
+      - name: Terraform Init
+        run: terraform init
+      - name: Terraform Format
+        run: terraform fmt -check
+      - name: Terraform Validate
+        run: terraform validate -no-color
 
   plan:
     runs-on: ubuntu-20.04
@@ -88,6 +92,3 @@ jobs:
         run: terraform init
       - name: Plan
         run: terraform plan -no-color
-        env:
-          TF_VAR_billing_account_id: "${{ secrets.BILLING_ACCOUNT_ID }}"
-          TF_VAR_seed_sa_email_address: "${{ secrets.SEED_SA_EMAIL_ADDRESS }}"
