--- a/.github/workflows/plan.yml
+++ b/.github/workflows/plan.yml
@@ -9,6 +9,7 @@ on:
 env:
   TF_VAR_billing_account_id: "${{ secrets.BILLING_ACCOUNT_ID }}"
   TF_VAR_seed_sa_email_address: "${{ secrets.SEED_SA_EMAIL_ADDRESS }}"
+  TF_VAR_github_admin_token: "${{ secrets.ADMIN_GITHUB_TOKEN }}"
 
 jobs:
   compliance-scan:
