--- a/.github/workflows/plan.yml
+++ b/.github/workflows/plan.yml
@@ -10,6 +10,8 @@ env:
   TF_VAR_billing_account_id: "${{ secrets.BILLING_ACCOUNT_ID }}"
   TF_VAR_seed_sa_email_address: "${{ secrets.SEED_SA_EMAIL_ADDRESS }}"
   TF_VAR_github_admin_token: "${{ secrets.ADMIN_GITHUB_TOKEN }}"
+  TF_VAR_project_postfix: "${{ secrets.GCP_PROJECT_POSTFIX }}"
+  TF_IN_AUTOMATION: "true"
 
 jobs:
   compliance-scan:
