--- a/.github/workflows/apply.yml
+++ b/.github/workflows/apply.yml
@@ -9,6 +9,7 @@ env:
   TF_VAR_github_admin_token: "${{ secrets.ADMIN_GITHUB_TOKEN }}"
   TF_VAR_project_postfix: "${{ secrets.GCP_PROJECT_POSTFIX }}"
   TF_IN_AUTOMATION: "true"
+  GITHUB_TOKEN: "${{ secrets.ADMIN_GITHUB_TOKEN }}"
 
 jobs:
   apply:
