--- a/.github/workflows/wi-test.yml
+++ b/.github/workflows/wi-test.yml
@@ -20,6 +20,8 @@ jobs:
         uses: actions/checkout@v2
       - id: Authenticating
         uses: google-github-actions/auth@v0
+        with:
+          workload_identity_provider: $WORKLOAD_IDENTITY_PROVIDER
       - name: Setting up GCP environment
         uses: google-github-actions/setup-gcloud@v0.5.1
         with:
