--- a/.github/workflows/wi-test.yml
+++ b/.github/workflows/wi-test.yml
@@ -22,6 +22,8 @@ jobs:
         uses: google-github-actions/auth@v0
         with:
           workload_identity_provider: $WORKLOAD_IDENTITY_PROVIDER
+          # todo: replace with seed SA / (need to configure workload id pool)
+          service_account: 'workload-identity-tryout@koenighotze-seed.iam.gserviceaccount.com'
       - name: Setting up GCP environment
         uses: google-github-actions/setup-gcloud@v0.5.1
         with:
