Pass service account to impersonate to the auth action

--- a/.github/workflows/plan.yml
+++ b/.github/workflows/plan.yml
@@ -1,9 +1,10 @@
 name: Plan
 
 on:
-  push:
-    branches: ["**"]
-    tags-ignore: ["**"]
+  # deactivated while playing with workload identities
+  # push:
+  #   branches: ["**"]
+  #   tags-ignore: ["**"]
   workflow_dispatch:
 
 env:
