--- a/.github/workflows/wi-test.yml
+++ b/.github/workflows/wi-test.yml
@@ -21,7 +21,7 @@ jobs:
       - id: Authenticating
         uses: google-github-actions/auth@v0
         with:
-          workload_identity_provider: $WORKLOAD_IDENTITY_PROVIDER
+          workload_identity_provider: "projects/577705814230/locations/global/workloadIdentityPools/my-pool/providers/my-provider"
           # todo: replace with seed SA / (need to configure workload id pool)
           service_account: 'workload-identity-tryout@koenighotze-seed.iam.gserviceaccount.com'
       - name: Setting up GCP environment
