--- a/.github/workflows/wi-test.yml
+++ b/.github/workflows/wi-test.yml
@@ -15,22 +15,23 @@ env:
 jobs:
   plan:
     runs-on: ubuntu-20.04
+    permissions:
+      contents: 'read'
+      id-token: 'write'
     steps:
       - name: Checkout
         uses: actions/checkout@v2
       - id: Authenticating
-        uses: google-github-actions/auth@v0
+        uses: google-github-actions/auth@v0.6.0
         with:
           workload_identity_provider: "projects/577705814230/locations/global/workloadIdentityPools/my-pool/providers/my-provider"
           # todo: replace with seed SA / (need to configure workload id pool)
           service_account: 'workload-identity-tryout@koenighotze-seed.iam.gserviceaccount.com'
+          token_format: 'access_token'
+        env:
+          ACTIONS_STEP_DEBUG: true
       - name: Setting up GCP environment
         uses: google-github-actions/setup-gcloud@v0.5.1
         with:
           export_default_credentials: true
-      - name: Setup Terraform
-        uses: hashicorp/setup-terraform@v1.3.2
-      - name: Init
-        run: terraform init
-      - name: Plan
-        run: terraform plan -no-color
+      - run: gcloud projects list
