--- a/.github/workflows/wi-test.yml
+++ b/.github/workflows/wi-test.yml
@@ -1,7 +1,9 @@
 name: Wi-Test
 
 on:
-  workflow_dispatch:
+  push:
+    branches: ["**"]
+    tags-ignore: ["**"]
 
 permissions:
   id-token: write
@@ -15,6 +17,7 @@ env:
   TF_VAR_project_postfix: "${{ secrets.GCP_PROJECT_POSTFIX }}"
   TF_IN_AUTOMATION: "true"
   GITHUB_TOKEN: "${{ secrets.ADMIN_GITHUB_TOKEN }}"
+  CLOUDSDK_CORE_PROJECT: ${{ secrets.BASELINE_PROJECT_ID }}
 
 jobs:
   plan:
