--- a/.github/workflows/plan.yml
+++ b/.github/workflows/plan.yml
@@ -1,10 +1,9 @@
 name: Plan
 
 on:
-  # deactivated while playing with workload identities
-  # push:
-  #   branches: ["**"]
-  #   tags-ignore: ["**"]
+  push:
+    branches: ["**"]
+    tags-ignore: ["**"]
   workflow_dispatch:
 
 env:
@@ -14,6 +13,10 @@ env:
   TF_VAR_project_postfix: "${{ secrets.GCP_PROJECT_POSTFIX }}"
   TF_IN_AUTOMATION: "true"
   GITHUB_TOKEN: "${{ secrets.ADMIN_GITHUB_TOKEN }}"
+  CLOUDSDK_CORE_PROJECT: ${{ secrets.BASELINE_PROJECT_ID }}
+
+permissions:
+  id-token: write
 
 jobs:
   compliance-scan:
@@ -21,10 +24,16 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v2
+      - name: Authenticating
+        uses: google-github-actions/auth@v0.6.0
+        with:
+          workload_identity_provider: ${{ secrets.WORKLOAD_IDENTITY_PROVIDER }}
+          # todo: replace with seed SA / (need to configure workload id pool)
+          service_account: ${{ secrets.SEED_SA_EMAIL_ADDRESS }}
+          token_format: 'access_token'
       - name: Setting up GCP environment
         uses: google-github-actions/setup-gcloud@v0.5.1
         with:
-          service_account_key: "${{ secrets.GCP_SEED_SA_KEY }}"
           export_default_credentials: true
       - name: Setup Terraform
         uses: hashicorp/setup-terraform@v1.3.2
