--- a/.github/workflows/apply.yml
+++ b/.github/workflows/apply.yml
@@ -17,20 +17,22 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v2
+      - name: Authenticating
+        uses: google-github-actions/auth@v0.6.0
+        with:
+          workload_identity_provider: ${{ secrets.WORKLOAD_IDENTITY_PROVIDER }}
+          # todo: replace with seed SA / (need to configure workload id pool)
+          service_account: ${{ secrets.SEED_SA_EMAIL_ADDRESS }}
+          token_format: 'access_token'
       - name: Setting up GCP environment
         uses: google-github-actions/setup-gcloud@v0.5.1
         with:
-        # TODO
-        #   workload_identity_provider: 'projects/123456789/locations/global/workloadIdentityPools/my-pool/providers/my-provider'
-        #   service_account: 'my-service-account@my-project.iam.gserviceaccount.com'
-          service_account_key: "${{ secrets.GCP_SEED_SA_KEY }}"
           export_default_credentials: true
       - name: Setup Terraform
         uses: hashicorp/setup-terraform@v1
       - name: Init
         run: terraform init
+      - name: Check security
+        uses: triat/terraform-security-scan@v3.0.1
       - name: Apply
         run: terraform apply --auto-approve
-        env:
-          GITHUB_OWNER: koenighotze
-          GITHUB_TOKEN: "${{ secrets.ADMIN_GITHUB_TOKEN }}"
