--- a/.github/workflows/plan.yml
+++ b/.github/workflows/plan.yml
@@ -52,29 +52,39 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v2
+      - name: Authenticating
+        uses: google-github-actions/auth@v0.6.0
+        with:
+          workload_identity_provider: ${{ secrets.WORKLOAD_IDENTITY_PROVIDER }}
+          # todo: replace with seed SA / (need to configure workload id pool)
+          service_account: ${{ secrets.SEED_SA_EMAIL_ADDRESS }}
+          token_format: 'access_token'
       - name: Setting up GCP environment
         uses: google-github-actions/setup-gcloud@v0.5.1
         with:
-          service_account_key: "${{ secrets.GCP_SEED_SA_KEY }}"
           export_default_credentials: true
       - name: Setup Terraform
         uses: hashicorp/setup-terraform@v1.3.2
       - name: Terraform Init
         run: terraform init
-      - name: tfsec
+      - name: Check security
         uses: triat/terraform-security-scan@v3.0.1
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
   qa:
     runs-on: ubuntu-20.04
     steps:
       - name: Checkout
         uses: actions/checkout@v2
+      - name: Authenticating
+        uses: google-github-actions/auth@v0.6.0
+        with:
+          workload_identity_provider: ${{ secrets.WORKLOAD_IDENTITY_PROVIDER }}
+          # todo: replace with seed SA / (need to configure workload id pool)
+          service_account: ${{ secrets.SEED_SA_EMAIL_ADDRESS }}
+          token_format: 'access_token'
       - name: Setting up GCP environment
         uses: google-github-actions/setup-gcloud@v0.5.1
         with:
-          service_account_key: "${{ secrets.GCP_SEED_SA_KEY }}"
           export_default_credentials: true
       - name: Setup Terraform
         uses: hashicorp/setup-terraform@v1.3.2
@@ -90,10 +100,13 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v2
-      - id: Authenticating
-        uses: google-github-actions/auth@v0
+      - name: Authenticating
+        uses: google-github-actions/auth@v0.6.0
         with:
-          credentials_json: "${{ secrets.GCP_SEED_SA_KEY }}"
+          workload_identity_provider: ${{ secrets.WORKLOAD_IDENTITY_PROVIDER }}
+          # todo: replace with seed SA / (need to configure workload id pool)
+          service_account: ${{ secrets.SEED_SA_EMAIL_ADDRESS }}
+          token_format: 'access_token'
       - name: Setting up GCP environment
         uses: google-github-actions/setup-gcloud@v0.5.1
         with:
