--- a/.github/workflows/plan.yml
+++ b/.github/workflows/plan.yml
@@ -2,7 +2,7 @@ name: Plan
 
 on:
   push:
-    branches: ["**"]
+    branches: ["main"]
     tags-ignore: ["**"]
   workflow_dispatch:
 
@@ -91,7 +91,7 @@ jobs:
       - name: Terraform Init
         run: terraform init
       - name: Terraform Format
-        run: terraform fmt -check
+        run: terraform fmt -check -recursive
       - name: Terraform Validate
         run: terraform validate -no-color
 
