Use Label-Token for pull requests

--- a/.github/workflows/receive-pull-request.yml
+++ b/.github/workflows/receive-pull-request.yml
@@ -60,6 +60,8 @@ jobs:
             linted
             qaed
             ready-for-review
+          github_token: ${{ secrets.GH_TOKEN_FOR_LABELING }}
+          number: ${{ github.event.number }}
       # - name: Save PR number
       #   run: |
       #     mkdir -p ./pr
