--- a/.github/workflows/receive-pull-request.yml
+++ b/.github/workflows/receive-pull-request.yml
@@ -51,6 +51,9 @@ jobs:
 
     runs-on: ubuntu-20.04
 
+    permissions:
+      pull-requests: write
+
     steps:
       - uses: actions/checkout@v3
 
