--- a/.github/workflows/destroy.yml
+++ b/.github/workflows/destroy.yml
@@ -11,6 +11,9 @@ env:
   TF_IN_AUTOMATION: "true"
   GITHUB_TOKEN: "${{ secrets.ADMIN_GITHUB_TOKEN }}"
 
+permissions:
+  id-token: write
+
 jobs:
   destroy:
     runs-on: ubuntu-20.04
