--- a/.github/workflows/plan.yml
+++ b/.github/workflows/plan.yml
@@ -99,6 +99,12 @@ jobs:
 
   plan:
     runs-on: ubuntu-20.04
+
+    needs:
+      - qa
+      - security-scan
+      - compliance-scan
+
     steps:
       - name: Checkout
         uses: actions/checkout@v3
