--- a/.github/workflows/apply.yml
+++ b/.github/workflows/apply.yml
@@ -7,6 +7,7 @@ env:
   TF_VAR_billing_account_id: "${{ secrets.BILLING_ACCOUNT_ID }}"
   TF_VAR_seed_sa_email_address: "${{ secrets.SEED_SA_EMAIL_ADDRESS }}"
   TF_VAR_github_admin_token: "${{ secrets.ADMIN_GITHUB_TOKEN }}"
+  TF_VAR_github_api_label_token: "${{ secrets.GH_TOKEN_FOR_LABELING }}"
   TF_VAR_project_postfix: "${{ secrets.GCP_PROJECT_POSTFIX }}"
   TF_VAR_workload_identity_provider_name: "${{ secrets.WORKLOAD_IDENTITY_PROVIDER }}"
   TF_VAR_workload_identity_pool_id: "${{ secrets.WORKLOAD_IDENTITY_POOL_ID }}"
