--- a/.github/workflows/apply.yml
+++ b/.github/workflows/apply.yml
@@ -11,7 +11,7 @@ env:
   TF_VAR_project_postfix: "${{ secrets.GCP_PROJECT_POSTFIX }}"
   TF_VAR_workload_identity_provider_name: "${{ secrets.WORKLOAD_IDENTITY_PROVIDER }}"
   TF_VAR_workload_identity_pool_id: "${{ secrets.WORKLOAD_IDENTITY_POOL_ID }}"
-
+  TF_INPUT: "false"
   TF_IN_AUTOMATION: "true"
   GITHUB_TOKEN: "${{ secrets.ADMIN_GITHUB_TOKEN }}"
 
@@ -33,13 +33,11 @@ jobs:
           token_format: 'access_token'
       - name: Setting up GCP environment
         uses: google-github-actions/setup-gcloud@v0.5.1
-        with:
-          export_default_credentials: true
       - name: Setup Terraform
         uses: hashicorp/setup-terraform@v1
       - name: Init
         run: terraform init
-      - name: Check security
-        uses: triat/terraform-security-scan@v3.0.1
+      - uses: actions/checkout@v3
+        run: docker run -v ${PWD}:/src aquasec/tfsec:v1.8 /src
       - name: Apply
         run: terraform apply --auto-approve
