--- a/.github/workflows/apply.yml
+++ b/.github/workflows/apply.yml
@@ -38,6 +38,7 @@ jobs:
       - name: Init
         run: terraform init
       - uses: actions/checkout@v3
+      - name: Scanning security
         run: docker run -v ${PWD}:/src aquasec/tfsec:v1.8 /src
       - name: Apply
         run: terraform apply --auto-approve
