--- a/.github/workflows/plan.yml
+++ b/.github/workflows/plan.yml
@@ -14,6 +14,9 @@ env:
   TF_VAR_project_postfix: "${{ secrets.GCP_PROJECT_POSTFIX }}"
   TF_VAR_workload_identity_provider_name: "${{ secrets.WORKLOAD_IDENTITY_PROVIDER }}"
   TF_VAR_workload_identity_pool_id: "${{ secrets.WORKLOAD_IDENTITY_POOL_ID }}"
+  TF_VAR_codacy_api_token: "${{ secrets.CODACY_API_TOKEN }}"
+  TF_VAR_docker_registry_username: "${{ secrets.DOCKER_REGISTRY_USERNAME }}"
+  TF_VAR_docker_registry_token: "${{ secrets.DOCKER_REGISTRY_TOKEN }}"
   TF_IN_AUTOMATION: "true"
   TF_INPUT: "false"
   GITHUB_TOKEN: "${{ secrets.ADMIN_GITHUB_TOKEN }}"
@@ -34,7 +37,7 @@ jobs:
           workload_identity_provider: ${{ secrets.WORKLOAD_IDENTITY_PROVIDER }}
           # todo: replace with seed SA / (need to configure workload id pool)
           service_account: ${{ secrets.SEED_SA_EMAIL_ADDRESS }}
-          token_format: 'access_token'
+          token_format: "access_token"
       - name: Setting up GCP environment
         uses: google-github-actions/setup-gcloud@v0.5.1
       - name: Setup Terraform
@@ -67,7 +70,7 @@ jobs:
           workload_identity_provider: ${{ secrets.WORKLOAD_IDENTITY_PROVIDER }}
           # todo: replace with seed SA / (need to configure workload id pool)
           service_account: ${{ secrets.SEED_SA_EMAIL_ADDRESS }}
-          token_format: 'access_token'
+          token_format: "access_token"
       - name: Setting up GCP environment
         uses: google-github-actions/setup-gcloud@v0.5.1
       - name: Setup Terraform
@@ -96,7 +99,7 @@ jobs:
           workload_identity_provider: ${{ secrets.WORKLOAD_IDENTITY_PROVIDER }}
           # todo: replace with seed SA / (need to configure workload id pool)
           service_account: ${{ secrets.SEED_SA_EMAIL_ADDRESS }}
-          token_format: 'access_token'
+          token_format: "access_token"
       - name: Setting up GCP environment
         uses: google-github-actions/setup-gcloud@v0.5.1
       - name: Setup Terraform
