Added runtime service account

--- a/.github/workflows/plan.yml
+++ b/.github/workflows/plan.yml
@@ -50,7 +50,7 @@ jobs:
         with:
           framework: terraform
           # we are fine with Google's Keys
-          skip_check: CKV_GCP_84
+          skip_check: CKV_GCP_84,CKV_GIT_4
           output_format: cli
           download_external_modules: true
 
