--- a/.github/workflows/plan.yml
+++ b/.github/workflows/plan.yml
@@ -8,7 +8,7 @@ on:
 
 env:
   TF_VAR_billing_account_id: "${{ secrets.BILLING_ACCOUNT_ID }}"
-  TF_VAR_seed_sa_email_address: "${{ secrets.SEED_SA_EMAIL_ADDRESS }}"
+  TF_VAR_seed_sa_email: "${{ secrets.SEED_SA_EMAIL_ADDRESS }}"
   TF_VAR_github_admin_token: "${{ secrets.ADMIN_GITHUB_TOKEN }}"
   TF_VAR_github_api_label_token: "${{ secrets.GH_TOKEN_FOR_LABELING }}"
   TF_VAR_project_postfix: "${{ secrets.GCP_PROJECT_POSTFIX }}"
