--- a/.github/workflows/plan.yml
+++ b/.github/workflows/plan.yml
@@ -11,7 +11,7 @@ env:
   TF_VAR_seed_sa_email: "${{ secrets.SEED_SA_EMAIL_ADDRESS }}"
   TF_VAR_github_admin_token: "${{ secrets.ADMIN_GITHUB_TOKEN }}"
   TF_VAR_github_api_label_token: "${{ secrets.GH_TOKEN_FOR_LABELING }}"
-  TF_VAR_project_postfix: "${{ secrets.GCP_PROJECT_POSTFIX }}"
+  TF_VAR_project_postfix: 398addce # "${{ secrets.GCP_PROJECT_POSTFIX }}"
   TF_VAR_workload_identity_provider_name: "${{ secrets.WORKLOAD_IDENTITY_PROVIDER }}"
   TF_VAR_workload_identity_pool_id: "${{ secrets.WORKLOAD_IDENTITY_POOL_ID }}"
   TF_VAR_codacy_api_token: "${{ secrets.CODACY_API_TOKEN }}"
@@ -20,7 +20,7 @@ env:
   TF_IN_AUTOMATION: "true"
   TF_INPUT: "false"
   GITHUB_TOKEN: "${{ secrets.ADMIN_GITHUB_TOKEN }}"
-  CLOUDSDK_CORE_PROJECT: ${{ secrets.GCP_PROJECT_ID }}
+  CLOUDSDK_CORE_PROJECT: koenighotze-seed-398addce # ${{ secrets.GCP_PROJECT_ID }}
 
 permissions:
   id-token: write
@@ -77,7 +77,7 @@ jobs:
       - name: Setup Terraform
         uses: hashicorp/setup-terraform@v1.3.2
       - name: Terraform Init
-        run: terraform init -backend-config="bucket=${{ secrets.TERRAFORM_STATE_BUCKET }}"
+        run: terraform init # -backend-config="bucket=${{ secrets.TERRAFORM_STATE_BUCKET }}"
       - name: Terraform Format
         run: terraform fmt -check -recursive
       - name: Terraform Validate
@@ -105,6 +105,6 @@ jobs:
       - name: Setup Terraform
         uses: hashicorp/setup-terraform@v1.3.2
       - name: Init
-        run: terraform init -backend-config="bucket=${{ secrets.TERRAFORM_STATE_BUCKET }}"
+        run: terraform init #-backend-config="bucket=${{ secrets.TERRAFORM_STATE_BUCKET }}"
       - name: Plan
         run: terraform plan -no-color
