--- a/.github/workflows/plan.yml
+++ b/.github/workflows/plan.yml
@@ -7,19 +7,19 @@ on:
   workflow_dispatch:
 
 env:
-  TF_VAR_billing_account_id: "${{ secrets.BILLING_ACCOUNT_ID }}"
-  TF_VAR_seed_sa_email: "${{ secrets.SEED_SA_EMAIL_ADDRESS }}"
-  TF_VAR_github_admin_token: "${{ secrets.ADMIN_GITHUB_TOKEN }}"
-  TF_VAR_github_api_label_token: "${{ secrets.GH_TOKEN_FOR_LABELING }}"
-  TF_VAR_project_postfix: 398addce # "${{ secrets.GCP_PROJECT_POSTFIX }}"
-  TF_VAR_workload_identity_provider_name: "${{ secrets.WORKLOAD_IDENTITY_PROVIDER }}"
-  TF_VAR_workload_identity_pool_id: "${{ secrets.WORKLOAD_IDENTITY_POOL_ID }}"
-  TF_VAR_codacy_api_token: "${{ secrets.CODACY_API_TOKEN }}"
-  TF_VAR_docker_registry_username: "${{ secrets.DOCKER_REGISTRY_USERNAME }}"
-  TF_VAR_docker_registry_token: "${{ secrets.DOCKER_REGISTRY_TOKEN }}"
-  TF_IN_AUTOMATION: "true"
-  TF_INPUT: "false"
-  GITHUB_TOKEN: "${{ secrets.ADMIN_GITHUB_TOKEN }}"
+  TF_VAR_billing_account_id: ${{ secrets.BILLING_ACCOUNT_ID }}
+  TF_VAR_seed_sa_email: ${{ secrets.SEED_SA_EMAIL_ADDRESS }}
+  TF_VAR_github_admin_token: ${{ secrets.ADMIN_GITHUB_TOKEN }}
+  TF_VAR_github_api_label_token: ${{ secrets.GH_TOKEN_FOR_LABELING }}
+  TF_VAR_project_postfix: ${{ secrets.GCP_PROJECT_POSTFIX }}
+  TF_VAR_workload_identity_provider_name: ${{ secrets.WORKLOAD_IDENTITY_PROVIDER }}
+  TF_VAR_workload_identity_pool_id: ${{ secrets.WORKLOAD_IDENTITY_POOL_ID }}
+  TF_VAR_codacy_api_token: ${{ secrets.CODACY_API_TOKEN }}
+  TF_VAR_docker_registry_username: ${{ secrets.DOCKER_REGISTRY_USERNAME }}
+  TF_VAR_docker_registry_token: ${{ secrets.DOCKER_REGISTRY_TOKEN }}
+  TF_IN_AUTOMATION: true
+  TF_INPUT: false
+  GITHUB_TOKEN: ${{ secrets.ADMIN_GITHUB_TOKEN }}
   CLOUDSDK_CORE_PROJECT: ${{ secrets.GCP_PROJECT_ID }}
 
 permissions:
