--- a/.github/workflows/plan.yml
+++ b/.github/workflows/plan.yml
@@ -77,7 +77,7 @@ jobs:
       - name: Setup Terraform
         uses: hashicorp/setup-terraform@v1.3.2
       - name: Terraform Init
-        run: terraform init # -backend-config="bucket=${{ secrets.TERRAFORM_STATE_BUCKET }}"
+        run: terraform init -backend-config="bucket=${{ secrets.TERRAFORM_STATE_BUCKET }}"
       - name: Terraform Format
         run: terraform fmt -check -recursive
       - name: Terraform Validate
@@ -105,6 +105,6 @@ jobs:
       - name: Setup Terraform
         uses: hashicorp/setup-terraform@v1.3.2
       - name: Init
-        run: terraform init #-backend-config="bucket=${{ secrets.TERRAFORM_STATE_BUCKET }}"
+        run: terraform init -backend-config="bucket=${{ secrets.TERRAFORM_STATE_BUCKET }}"
       - name: Plan
         run: terraform plan -no-color
