--- a/.github/workflows/destroy.yml
+++ b/.github/workflows/destroy.yml
@@ -4,19 +4,19 @@ on:
   workflow_dispatch:
 
 env:
-  TF_VAR_billing_account_id: "${{ secrets.BILLING_ACCOUNT_ID }}"
-  TF_VAR_seed_sa_email: "${{ secrets.SEED_SA_EMAIL_ADDRESS }}"
-  TF_VAR_github_admin_token: "${{ secrets.ADMIN_GITHUB_TOKEN }}"
-  TF_VAR_github_api_label_token: "${{ secrets.GH_TOKEN_FOR_LABELING }}"
-  TF_VAR_project_postfix: "${{ secrets.GCP_PROJECT_POSTFIX }}"
-  TF_VAR_workload_identity_provider_name: "${{ secrets.WORKLOAD_IDENTITY_PROVIDER }}"
-  TF_VAR_workload_identity_pool_id: "${{ secrets.WORKLOAD_IDENTITY_POOL_ID }}"
-  TF_VAR_codacy_api_token: "${{ secrets.CODACY_API_TOKEN }}"
-  TF_VAR_docker_registry_username: "${{ secrets.DOCKER_REGISTRY_USERNAME }}"
-  TF_VAR_docker_registry_token: "${{ secrets.DOCKER_REGISTRY_TOKEN }}"
-  TF_INPUT: "false"
-  TF_IN_AUTOMATION: "true"
-  GITHUB_TOKEN: "${{ secrets.ADMIN_GITHUB_TOKEN }}"
+  TF_VAR_billing_account_id: ${{ secrets.BILLING_ACCOUNT_ID }}
+  TF_VAR_seed_sa_email: ${{ secrets.SEED_SA_EMAIL_ADDRESS }}
+  TF_VAR_github_admin_token: ${{ secrets.ADMIN_GITHUB_TOKEN }}
+  TF_VAR_github_api_label_token: ${{ secrets.GH_TOKEN_FOR_LABELING }}
+  TF_VAR_project_postfix: ${{ secrets.GCP_PROJECT_POSTFIX }}
+  TF_VAR_workload_identity_provider_name: ${{ secrets.WORKLOAD_IDENTITY_PROVIDER }}
+  TF_VAR_workload_identity_pool_id: ${{ secrets.WORKLOAD_IDENTITY_POOL_ID }}
+  TF_VAR_codacy_api_token: ${{ secrets.CODACY_API_TOKEN }}
+  TF_VAR_docker_registry_username: ${{ secrets.DOCKER_REGISTRY_USERNAME }}
+  TF_VAR_docker_registry_token: ${{ secrets.DOCKER_REGISTRY_TOKEN }}
+  TF_INPUT: false
+  TF_IN_AUTOMATION: true
+  GITHUB_TOKEN: ${{ secrets.ADMIN_GITHUB_TOKEN }}
 
 permissions:
   id-token: write
@@ -31,9 +31,7 @@ jobs:
         uses: google-github-actions/auth@v0.6.0
         with:
           workload_identity_provider: ${{ secrets.WORKLOAD_IDENTITY_PROVIDER }}
-          # todo: replace with seed SA / (need to configure workload id pool)
           service_account: ${{ secrets.SEED_SA_EMAIL_ADDRESS }}
-          token_format: "access_token"
       - name: Setting up GCP environment
         uses: google-github-actions/setup-gcloud@v0.6.0
         with:
@@ -41,6 +39,6 @@ jobs:
       - name: Setup Terraform
         uses: hashicorp/setup-terraform@v1
       - name: Init
-        run: terraform init
+        run: terraform init -backend-config="bucket=${{ secrets.TERRAFORM_STATE_BUCKET }}"
       - name: Apply
         run: terraform destroy --auto-approve
