--- a/.github/workflows/plan.yml
+++ b/.github/workflows/plan.yml
@@ -72,6 +72,7 @@ jobs:
         with:
           workload_identity_provider: ${{ secrets.WORKLOAD_IDENTITY_PROVIDER }}
           service_account: koenighotze-seed-sa@koenighotze-seed-398addce.iam.gserviceaccount.com # ${{ secrets.SEED_SA_EMAIL_ADDRESS }}
+          token_format: "access_token"
       - name: Setting up GCP environment
         uses: google-github-actions/setup-gcloud@v0.6.0
       - run: gsutil ls gs://koenighotze-seed-398addce/terraform/baseline/state
