--- a/.github/workflows/plan.yml
+++ b/.github/workflows/plan.yml
@@ -75,7 +75,7 @@ jobs:
           token_format: "access_token"
       - name: Setting up GCP environment
         uses: google-github-actions/setup-gcloud@v0.6.0
-      - run: gsutil ls gs://koenighotze-seed-398addce/terraform/baseline/state
+      - run: gcloud projects list
       - name: Setup Terraform
         uses: hashicorp/setup-terraform@v1.3.2
       - name: Terraform Init
