--- a/.github/workflows/apply.yml
+++ b/.github/workflows/apply.yml
@@ -53,4 +53,4 @@ jobs:
       - name: Init
         run: terraform init -backend-config="bucket=${{ secrets.TERRAFORM_STATE_BUCKET }}"
       - name: Apply
-        run: terraform apply --auto-approve -replace="google_project_iam_member.bodleian_backend_service_iam_binding"
+        run: terraform apply --auto-approve
