--- a/.github/workflows/plan.yml
+++ b/.github/workflows/plan.yml
@@ -37,7 +37,8 @@ jobs:
         with:
           framework: terraform
           # we are fine with Google's Keys
-          skip_check: CKV_GCP_84,CKV_GIT_4,CKV_GCP_117
+          # we are fine with basic roles (no org), we are fine with our own module
+          skip_check: CKV_GCP_84,CKV_GIT_4,CKV_GCP_117,CKV_TF_1
           output_format: cli
           download_external_modules: true
 
