cleaning up scripts

--- a/.github/workflows/plan.yml
+++ b/.github/workflows/plan.yml
@@ -2,6 +2,8 @@ name: Plan
 
 on:
   push:
+    paths-ignore:
+      - 'scripts/**'
     branches: ["main"]
     tags-ignore: ["**"]
   workflow_dispatch:
