Exclude checks in workflows for own modules

--- a/.github/workflows/destroy.yml
+++ b/.github/workflows/destroy.yml
@@ -3,12 +3,11 @@ name: Destroy
 on:
   workflow_dispatch:
 
-
 env:
   TF_VAR_billing_account_id: ${{ secrets.BILLING_ACCOUNT_ID }}
   TF_VAR_seed_sa_email: ${{ secrets.SEED_SA_EMAIL_ADDRESS }}
   TF_VAR_github_admin_token: ${{ secrets.ADMIN_GITHUB_TOKEN }}
-  TF_VAR_github_api_label_token: ${{ secrets.GH_TOKEN_FOR_LABELING }}
+  TF_VAR_github_api_label_token: ${{ secrets.ADMIN_GITHUB_TOKEN }}
   TF_VAR_project_postfix: ${{ secrets.GCP_PROJECT_POSTFIX }}
   TF_VAR_workload_identity_provider_name: ${{ secrets.WORKLOAD_IDENTITY_PROVIDER }}
   TF_VAR_workload_identity_pool_id: ${{ secrets.WORKLOAD_IDENTITY_POOL_ID }}
@@ -18,6 +17,7 @@ env:
   TF_IN_AUTOMATION: true
   TF_INPUT: false
   GITHUB_TOKEN: ${{ secrets.ADMIN_GITHUB_TOKEN }}
+  GH_TOKEN: ${{ secrets.ADMIN_GITHUB_TOKEN }}
   CLOUDSDK_CORE_PROJECT: ${{ secrets.GCP_PROJECT_ID }}
 
 permissions:
@@ -51,5 +51,5 @@ jobs:
         uses: hashicorp/setup-terraform@v3
       - name: Init
         run: terraform init -backend-config="bucket=${{ secrets.TERRAFORM_STATE_BUCKET }}"
-      - name: Plan
+      - name: Destroy
         run: terraform destroy -no-color
