--- a/.github/workflows/apply.yml
+++ b/.github/workflows/apply.yml
@@ -60,4 +60,12 @@ jobs:
       - name: Init
         run: terraform init -backend-config="bucket=${{ secrets.TERRAFORM_STATE_BUCKET }}"
       - name: Apply
-        run: terraform apply --auto-approve
+        run: terraform apply -auto-approve
+      - name: Show Terraform Output as Summary
+        run: |
+          {
+            echo "### Terraform Output";
+            echo "\`\`\`";
+            terraform output;
+            echo "\`\`\`";
+          }  > "${GITHUB_STEP_SUMMARY}"
