--- a/.github/workflows/bootstrap.yml
+++ b/.github/workflows/bootstrap.yml
@@ -2,6 +2,11 @@ name: Bootstrap setup
 
 on:
   workflow_dispatch:
+    inputs:
+      apply_plan:
+        description: "Apply plan?"
+        required: false
+        default: "no"
   push:
     paths:
       - bootstrap/**
@@ -78,6 +83,11 @@ jobs:
         run: terraform validate -no-color
 
   plan:
+    needs:
+      - compliance-scan
+      - lint
+      - qa
+
     runs-on: ubuntu-20.04
 
     steps:
@@ -103,5 +113,35 @@ jobs:
             echo "### Terraform Plan Output";
             echo "\`\`\`";
             terraform show -no-color tfplan;
+            echo "\`\`\`";
+          }  > "${GITHUB_STEP_SUMMARY}"
+
+  apply:
+    if: ${{ github.event.inputs.apply_plan == 'yes' }}
+    needs: plan
+
+    runs-on: ubuntu-20.04
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+      - name: Authenticating
+        uses: google-github-actions/auth@v2.1.2
+        with:
+          workload_identity_provider: ${{ secrets.WORKLOAD_IDENTITY_PROVIDER }}
+          service_account: ${{ secrets.SEED_SA_EMAIL_ADDRESS }}
+      - name: Setting up GCP environment
+        uses: google-github-actions/setup-gcloud@v2.1.0
+      - name: Setup Terraform
+        uses: hashicorp/setup-terraform@v3
+      - name: Init
+        run: terraform init -backend-config="bucket=${{ secrets.TERRAFORM_STATE_BUCKET }}"
+      - name: Apply
+        run: terraform apply -auto-approve
+      - name: Show Terraform Output as Summary
+        run: |
+          {
+            echo "### Terraform Output";
+            echo "\`\`\`";
+            terraform output;
             echo "\`\`\`";
           }  > "${GITHUB_STEP_SUMMARY}"
