Allow public repos and google keys

--- a/trivy.yaml
+++ b/trivy.yaml
@@ -1,4 +1,27 @@
+config: trivy.yaml
+debug: false
 exit-code: 1
-severity: ["UNKNOWN", "LOW", "MEDIUM", "HIGH", "CRITICAL"]
-ignore-unfixed: true
 format: table
+generate-default-config: false
+ignore-policy: ""
+ignore-unfixed: false
+ignorefile: .trivyignore
+insecure: false
+kubernetes:
+    k8s-version: ""
+misconfiguration:
+    include-non-failures: false
+    scanners:
+        - dockerfile
+        - terraform
+    terraform:
+        exclude-downloaded-modules: false
+quiet: false
+report: all
+severity:
+    - UNKNOWN
+    - LOW
+    - MEDIUM
+    - HIGH
+    - CRITICAL
+timeout: 1m0s
