Working on checkov config

--- a/.github/workflows/apply.yml
+++ b/.github/workflows/apply.yml
@@ -57,6 +57,10 @@ jobs:
   apply:
     runs-on: ubuntu-20.04
 
+    needs:
+      - compliance-scan
+      - security-scan
+
     steps:
       - name: Checkout
         uses: actions/checkout@v4
