--- a/.github/workflows/bootstrap.yml
+++ b/.github/workflows/bootstrap.yml
@@ -30,6 +30,18 @@ defaults:
     working-directory: ./bootstrap
 
 jobs:
+  security-scan:
+    runs-on: ubuntu-20.04
+
+    steps:
+      - uses: actions/checkout@v4
+      - name: Security scan
+        uses: aquasecurity/trivy-action@0.21.0
+        with:
+          scan-type: config
+          trivy-config: trivy.yaml
+          ignore-unfixed: false
+
   compliance-scan:
     runs-on: ubuntu-20.04
     steps:
@@ -40,9 +52,6 @@ jobs:
         uses: bridgecrewio/checkov-action@v12.2750.0
         with:
           framework: terraform
-          # we are fine with Google's Keys
-          # we are fine with basic roles (no org), we are fine with our own module
-          skip_check: CKV_GCP_84,CKV_GIT_4,CKV_GCP_117,CKV_TF_1
           output_format: cli
           download_external_modules: true
 
@@ -84,6 +93,7 @@ jobs:
 
   plan:
     needs:
+      - security-scan
       - compliance-scan
       - lint
       - qa
