--- a/.github/workflows/apply.yml
+++ b/.github/workflows/apply.yml
@@ -8,8 +8,7 @@ on:
 env:
   TF_VAR_billing_account_id: ${{ secrets.BILLING_ACCOUNT_ID }}
   TF_VAR_seed_sa_email: ${{ secrets.SEED_SA_EMAIL_ADDRESS }}
-  TF_VAR_github_admin_token: ${{ secrets.ADMIN_GITHUB_TOKEN }}
-  TF_VAR_github_api_label_token: ${{ secrets.ADMIN_GITHUB_TOKEN }}
+  TF_VAR_github_admin_token: ${{ secrets.GITHUB_ADMIN_TOKEN }}
   TF_VAR_project_postfix: ${{ secrets.GCP_PROJECT_POSTFIX }}
   TF_VAR_workload_identity_provider_name: ${{ secrets.WORKLOAD_IDENTITY_PROVIDER }}
   TF_VAR_workload_identity_pool_id: ${{ secrets.WORKLOAD_IDENTITY_POOL_ID }}
@@ -18,8 +17,8 @@ env:
   TF_VAR_docker_registry_token: ${{ secrets.DOCKER_REGISTRY_TOKEN }}
   TF_IN_AUTOMATION: true
   TF_INPUT: false
-  GITHUB_TOKEN: ${{ secrets.ADMIN_GITHUB_TOKEN }}
-  GH_TOKEN: ${{ secrets.ADMIN_GITHUB_TOKEN }}
+  GITHUB_TOKEN: ${{ secrets.GITHUB_ADMIN_TOKEN }}
+  GH_TOKEN: ${{ secrets.GITHUB_ADMIN_TOKEN }}
   CLOUDSDK_CORE_PROJECT: ${{ secrets.GCP_PROJECT_ID }}
 
 permissions:
