--- a/.github/workflows/apply.yml
+++ b/.github/workflows/apply.yml
@@ -49,6 +49,9 @@ jobs:
         uses: bridgecrewio/checkov-action@v12.2840.0
 
   apply:
+    concurrency:
+      group: terraform
+
     runs-on: ubuntu-20.04
 
     needs:
